--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@
   }
 
   body {
-    @apply font-sans antialiased;
+    font-family: system-ui, -apple-system, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
